Fixed #18, menu visible on mobile

--- a/style.css
+++ b/style.css
@@ -902,6 +902,16 @@ h3.widget-title{
 
 }
 
+@media only screen and (max-width: 768px) {
+
+	#topside .pages {
+		display: block !important;
+		float: none !important;
+		width: 100% !important;
+	}	
+	
+}
+
 @media only screen and (max-width: 320px) {
 	#logo {
 		width: 40% !important;
